--- a/HelloTriangle/HelloTriangle/HelloTriangle.vcxproj
+++ b/HelloTriangle/HelloTriangle/HelloTriangle.vcxproj
@@ -116,7 +116,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="glad.c" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Shader.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HelloTriangle.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\shaders\hello.fs" />
+    <Text Include="..\shaders\hello.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
