--- a/Lista2/HelloTriangle/Exercicio6/Exercicio6.vcxproj.filters
+++ b/Lista2/HelloTriangle/Exercicio6/Exercicio6.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="shaders">
+      <UniqueIdentifier>{7b96dada-626f-4745-9ae7-badb2e426648}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c">
@@ -29,5 +32,13 @@
     <ClInclude Include="Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\shaders\ortho.fs">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="..\shaders\ortho.vs">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
