Apenas cor branca transparente

--- a/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj
+++ b/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Shader.h" />
