--- a/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj.filters
+++ b/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClInclude Include="Square.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shaders\helloCamera.fs">
