Enums separados em arquivos headers

--- a/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj.filters
+++ b/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj.filters
@@ -65,6 +65,18 @@
     <ClInclude Include="Constants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ColorsEnum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GridDirectionsKeyEnum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpaceDirectionsKeyEnum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NumbersKeyEnum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shaders\helloCamera.fs">
