--- a/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj
+++ b/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj
@@ -154,10 +154,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h" />
+    <ClInclude Include="ColorsEnum.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="GridDirectionsKeyEnum.h" />
+    <ClInclude Include="NumbersKeyEnum.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="SpaceDirectionsKeyEnum.h" />
     <ClInclude Include="Square.h" />
     <ClInclude Include="Triangle.h" />
   </ItemGroup>
