--- a/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj.filters
+++ b/TrabalhoGrauA/HelloTriangle/Exercicio6/Exercicio6.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Square.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Pallete.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="NumbersKeyEnum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Pallete.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
