Trocando frame sprite conforme direção andada

--- a/TrabalhoGrauB/HelloTilesIso/Hello-TilesIso/Hello-TilesIso.vcxproj
+++ b/TrabalhoGrauB/HelloTilesIso/Hello-TilesIso/Hello-TilesIso.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Level.h" />
     <ClInclude Include="Object2D.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerTextureDirectionFacingEnum.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
