--- a/TrabalhoGrauB/HelloTilesIso/Hello-TilesIso/Hello-TilesIso.vcxproj.filters
+++ b/TrabalhoGrauB/HelloTilesIso/Hello-TilesIso/Hello-TilesIso.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Plant.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneManager.h">
@@ -68,9 +71,6 @@
     <ClInclude Include="Level.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
-    <ClInclude Include="GridTypeEnum.h">
-      <Filter>Arquivos de Cabeçalho</Filter>
-    </ClInclude>
     <ClInclude Include="GridDirectionsEnum.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
@@ -81,6 +81,12 @@
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
     <ClInclude Include="PlayerTextureDirectionFacingEnum.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="Plant.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="GridTypeEnum.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
   </ItemGroup>
