--- a/TrabalhoGrauB/HelloTilesIso/Hello-TilesIso/Hello-TilesIso.vcxproj
+++ b/TrabalhoGrauB/HelloTilesIso/Hello-TilesIso/Hello-TilesIso.vcxproj
@@ -157,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="ConstantsPlayer.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GridDirectionsEnum.h" />
     <ClInclude Include="GridTypeEnum.h" />
@@ -164,7 +165,9 @@
     <ClInclude Include="Plant.h" />
     <ClInclude Include="PlantTypeEnum.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerActionEnum.h" />
     <ClInclude Include="PlayerTextureDirectionFacingEnum.h" />
+    <ClInclude Include="PlayerTextureTypeEnum.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
